--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'com.android.application'
 
 repositories {
-    mavenLocal()
+    maven {
+        url "https://maven.google.com"
+    }
     flatDir {
         dirs 'libs'
     }
@@ -32,14 +34,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:appcompat-v7:24.2.0'
-
     // Displaying images
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.google.firebase:firebase-database:11.0.2'
+    // FirebaseUI Database only
+    compile 'com.firebaseui:firebase-ui-database:2.1.0'
+    // FirebasUI Auth only
+    compile 'com.firebaseui:firebase-ui-auth:2.1.0'
+    // FirebaseUI Storage only
+    compile 'com.firebaseui:firebase-ui-storage:2.1.0'
+    compile 'com.google.firebase:firebase-auth:11.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
